[project]
name = "torchstats"
authors = [
    { name = "David Boetius", email = "david.boetius@uni-konstanz.de" }
]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch>=1.12.1,<3.0",
    "numpy>=1.25,<3.0",
    "scipy>=1.11,<2.0",
    "rust_enum==1.1.5",
]

[project.optional-dependencies]
test = ["pytest>=7.4,<7.5"]
develop = ["ruff==0.11.11"]
all = ["probspecs[test,develop]"]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
